@@ -1,1 +1,13 @@
 4A ICY Project : CV Generator
+
+Prerequisites:
+- Maven
+- Java 17
+- pdfGen API
+
+Setup:
+1- Reload Project with maven to resolve dependencies.
+2- Add "--add-opens java.base/java.lang=ALL-UNNAMED" to VM Options in Run Configurations Tab.
+3- Run CvApplication.java to Launch API Server
+4- Launch pdfGen API.
+5- Navigate to http://localhost:8080/ for Web Application
